--- a/index.html
+++ b/index.html
@@ -101,6 +101,23 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="referrer" content="strict-origin-when-cross-origin" />
+    <script
+      async
+      src="https://plausible.io/js/pa-6Kr3aAWTI2ZSkk0Pnf4vu.js"
+    ></script>
+    <script>
+      (window.plausible =
+        window.plausible ||
+        function () {
+          (plausible.q = plausible.q || []).push(arguments);
+        }),
+        (plausible.init =
+          plausible.init ||
+          function (i) {
+            plausible.o = i || {};
+          });
+      plausible.init();
+    </script>
 
     <script type="application/ld+json">
       {
